DBC22-3328: fixed the issue that control button not showing up on replay the day
DBC22-3328: fixed the issue that control button not showing up on replay the day

--- a/src/frontend/src/pages/CameraDetailsPage.scss
+++ b/src/frontend/src/pages/CameraDetailsPage.scss
@@ -352,7 +352,6 @@
           .card-img-box {
             height: 388px;
             position: relative;
-            overflow: hidden;
             border-radius: 8px;
 
             img {
